# Chooper

./: CMakeLists.txt  README.md  main.cpp
lib/boost/arm64/lib/: libboost_atomic.dylib  libboost_chrono.dylib  libboost_container.dylib  libboost_context.dylib  libboost_contract.dylib  libboost_coroutine.dylib  libboost_date_time.dylib  libboost_filesystem.dylib  libboost_graph.dylib  libboost_iostreams.dylib  libboost_locale.dylib  libboost_log.dylib  libboost_log_setup.dylib  libboost_prg_exec_monitor.dylib  libboost_program_options.dylib  libboost_random.dylib  libboost_regex.dylib  libboost_serialization.dylib  libboost_stacktrace_addr2line.dylib  libboost_stacktrace_basic.dylib  libboost_stacktrace_noop.dylib  libboost_system.dylib  libboost_thread.dylib  libboost_timer.dylib  libboost_type_erasure.dylib  libboost_unit_test_framework.dylib  libboost_wserialization.dylib
lib/boost/arm64/lib/cmake/boost_atomic-1.80.0/: boost_atomic-config.cmake  libboost_atomic-variant-shared.cmake
lib/boost/arm64/lib/cmake/boost_chrono-1.80.0/: boost_chrono-config.cmake
lib/boost/arm64/lib/cmake/boost_container-1.80.0/: boost_container-config.cmake
lib/boost/arm64/lib/cmake/boost_context-1.80.0/: boost_context-config.cmake  libboost_context-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_contract-1.80.0/: boost_contract-config.cmake  libboost_contract-variant-shared.cmake  libboost_contract-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_coroutine-1.80.0/: boost_coroutine-config.cmake  libboost_coroutine-variant-shared.cmake
lib/boost/arm64/lib/cmake/boost_date_time-1.80.0/: boost_date_time-config.cmake
lib/boost/arm64/lib/cmake/boost_exception-1.80.0/: boost_exception-config.cmake
lib/boost/arm64/lib/cmake/boost_filesystem-1.80.0/: boost_filesystem-config.cmake  libboost_filesystem-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_graph-1.80.0/: boost_graph-config.cmake  libboost_graph-variant-shared.cmake  libboost_graph-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_graph_parallel-1.80.0/: boost_graph_parallel-config.cmake
lib/boost/arm64/lib/cmake/boost_headers-1.80.0/: boost_headers-config.cmake
lib/boost/arm64/lib/cmake/boost_iostreams-1.80.0/: boost_iostreams-config.cmake  libboost_iostreams-variant-shared.cmake  libboost_iostreams-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_locale-1.80.0/: boost_locale-config.cmake  libboost_locale-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_log-1.80.0/: boost_log-config.cmake  libboost_log-variant-shared.cmake
lib/boost/arm64/lib/cmake/boost_log_setup-1.80.0/: boost_log_setup-config.cmake
lib/boost/arm64/lib/cmake/boost_mpi-1.80.0/: boost_mpi-config.cmake
lib/boost/arm64/lib/cmake/boost_prg_exec_monitor-1.80.0/: boost_prg_exec_monitor-config.cmake  libboost_prg_exec_monitor-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_program_options-1.80.0/: boost_program_options-config.cmake
lib/boost/arm64/lib/cmake/boost_random-1.80.0/: boost_random-config.cmake  libboost_random-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_regex-1.80.0/: boost_regex-config.cmake  libboost_regex-variant-shared.cmake
lib/boost/arm64/lib/cmake/boost_serialization-1.80.0/: boost_serialization-config.cmake
lib/boost/arm64/lib/cmake/boost_stacktrace_addr2line-1.80.0/: boost_stacktrace_addr2line-config.cmake  libboost_stacktrace_addr2line-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_stacktrace_basic-1.80.0/: boost_stacktrace_basic-config.cmake  libboost_stacktrace_basic-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_stacktrace_noop-1.80.0/: boost_stacktrace_noop-config.cmake  libboost_stacktrace_noop-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_system-1.80.0/: boost_system-config.cmake
lib/boost/arm64/lib/cmake/boost_test_exec_monitor-1.80.0/: boost_test_exec_monitor-config.cmake  libboost_test_exec_monitor-variant-shared.cmake  libboost_test_exec_monitor-variant-static.cmake
lib/boost/arm64/lib/cmake/boost_thread-1.80.0/: boost_thread-config.cmake  libboost_thread-variant-shared.cmake
lib/boost/arm64/lib/cmake/boost_timer-1.80.0/: boost_timer-config.cmake
lib/boost/arm64/lib/cmake/boost_type_erasure-1.80.0/: boost_type_erasure-config.cmake
lib/boost/x86_64/lib/: libboost_atomic.dylib  libboost_chrono.dylib  libboost_container.dylib  libboost_context.dylib  libboost_contract.dylib  libboost_coroutine.dylib  libboost_date_time.dylib  libboost_filesystem.dylib  libboost_graph.dylib  libboost_iostreams.dylib  libboost_locale.dylib  libboost_log.dylib  libboost_log_setup.dylib  libboost_prg_exec_monitor.dylib  libboost_program_options.dylib  libboost_random.dylib  libboost_regex.dylib  libboost_serialization.dylib  libboost_stacktrace_addr2line.dylib  libboost_stacktrace_basic.dylib  libboost_stacktrace_noop.dylib  libboost_system.dylib  libboost_thread.dylib  libboost_timer.dylib  libboost_type_erasure.dylib  libboost_unit_test_framework.dylib  libboost_wserialization.dylib
lib/ffmpeg/arm64/lib/: libavdevice.59.4.100.dylib  libavfilter.8.24.100.dylib  libavformat.59.16.100.dylib  libavutil.57.17.100.dylib  libpostproc.56.3.100.dylib  libswresample.4.3.100.dylib  libswscale.6.4.100.dylib
lib/ffmpeg/arm64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
resource/: fragment_shader.glsl  vertex_shader.glsl
src/ffmpeg/: CMakeLists.txt  codec_util.cpp  codec_util.h
src/file/: file_util.cpp  file_util.h
src/gl/: CMakeLists.txt  shader.cpp  shader.h  shape.cpp  shape.h  texture.cpp  texture.h  triangle.cpp  triangle.h  video_render.cpp  video_render.h
src/image/: CMakeLists.txt  image.cpp  image.h
src/player/: CMakeLists.txt  i_player.h  image_player.cpp  image_player.h  player.cpp  player.h
src/state/: CMakeLists.txt  state.cpp  state.h
src/time/: CMakeLists.txt  thread_util.cpp  thread_util.h  timer.cpp  timer.h
src/window/: CMakeLists.txt  window.cpp  window.h
test/: CMakeLists.txt  file_test.cpp  image_test.cpp  test.cpp
(+70 files in other folders)
